--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -115,19 +115,19 @@
     <ClCompile Include="menu\menu.cpp" />
     <ClCompile Include="render\render.cpp" />
     <ClCompile Include="ui\ui.cpp" />
-    <ClCompile Include="valve_sdk\csgostructs.cpp" />
-    <ClCompile Include="valve_sdk\sdk.cpp" />
-    <ClCompile Include="valve_sdk\math\Vector2D.cpp" />
-    <ClCompile Include="valve_sdk\math\Vector4D.cpp" />
-    <ClCompile Include="valve_sdk\math\VMatrix.cpp" />
-    <ClCompile Include="valve_sdk\misc\characterset.cpp" />
-    <ClCompile Include="valve_sdk\misc\checksum_crc.cpp" />
-    <ClCompile Include="valve_sdk\misc\checksum_md5.cpp" />
-    <ClCompile Include="valve_sdk\misc\Color.cpp" />
-    <ClCompile Include="valve_sdk\misc\Convar.cpp" />
-    <ClCompile Include="valve_sdk\misc\UtlBuffer.cpp" />
-    <ClCompile Include="valve_sdk\misc\UtlString.cpp" />
-    <ClCompile Include="valve_sdk\netvars.cpp" />
+    <ClCompile Include="sdk\csgostructs.cpp" />
+    <ClCompile Include="sdk\sdk.cpp" />
+    <ClCompile Include="sdk\math\Vector2D.cpp" />
+    <ClCompile Include="sdk\math\Vector4D.cpp" />
+    <ClCompile Include="sdk\math\VMatrix.cpp" />
+    <ClCompile Include="sdk\misc\characterset.cpp" />
+    <ClCompile Include="sdk\misc\checksum_crc.cpp" />
+    <ClCompile Include="sdk\misc\checksum_md5.cpp" />
+    <ClCompile Include="sdk\misc\Color.cpp" />
+    <ClCompile Include="sdk\misc\Convar.cpp" />
+    <ClCompile Include="sdk\misc\UtlBuffer.cpp" />
+    <ClCompile Include="sdk\misc\UtlString.cpp" />
+    <ClCompile Include="sdk\netvars.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="configs\config.hpp" />
@@ -135,7 +135,7 @@
     <ClInclude Include="fonts\fonts.hpp" />
     <ClInclude Include="imgui\impl\imgui_impl_dx9.h" />
     <ClInclude Include="imgui\impl\imgui_impl_win32.h" />
-    <ClInclude Include="valve_sdk\Misc\datamap.hpp" />
+    <ClInclude Include="sdk\misc\datamap.hpp" />
     <ClInclude Include="fonts\droid.hpp" />
     <ClInclude Include="features\bhop.hpp" />
     <ClInclude Include="features\chams.hpp" />
@@ -152,71 +152,71 @@
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
-    <ClInclude Include="valve_sdk\interfaces\IRefCounted.hpp" />
+    <ClInclude Include="sdk\interfaces\IRefCounted.hpp" />
     <ClInclude Include="menu\menu.hpp" />
     <ClInclude Include="configs\options.hpp" />
     <ClInclude Include="render\render.hpp" />
     <ClInclude Include="helpers\singleton.hpp" />
     <ClInclude Include="ui\ui.hpp" />
-    <ClInclude Include="valve_sdk\csgostructs.hpp" />
-    <ClInclude Include="valve_sdk\sdk.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\CClientState.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\CInput.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IAppSystem.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IBaseClientDll.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientEntity.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientEntityList.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientMode.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientNetworkable.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientRenderable.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientThinkable.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IClientUnknown.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\ICollideable.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IConVar.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\ICvar.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IEngineSound.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IEngineTrace.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IGameEventmanager.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IMaterialSystem.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IMDLCache.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IMoveHelper.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IPanel.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IPhysics.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IPrediction.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IRenderView.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\ISurface.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IVDebugOverlay.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IVEngineClient.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IViewRender.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IVModelInfoClient.hpp" />
-    <ClInclude Include="valve_sdk\interfaces\IVModelRender.hpp" />
-    <ClInclude Include="valve_sdk\math\QAngle.hpp" />
-    <ClInclude Include="valve_sdk\math\Vector.hpp" />
-    <ClInclude Include="valve_sdk\math\Vector2D.hpp" />
-    <ClInclude Include="valve_sdk\math\Vector4D.hpp" />
-    <ClInclude Include="valve_sdk\math\VMatrix.hpp" />
-    <ClInclude Include="valve_sdk\misc\BaseHandle.hpp" />
-    <ClInclude Include="valve_sdk\misc\characterset.hpp" />
-    <ClInclude Include="valve_sdk\misc\checksum_crc.hpp" />
-    <ClInclude Include="valve_sdk\misc\checksum_md5.hpp" />
-    <ClInclude Include="valve_sdk\misc\ClientClass.hpp" />
-    <ClInclude Include="valve_sdk\misc\Color.hpp" />
-    <ClInclude Include="valve_sdk\misc\Convar.hpp" />
-    <ClInclude Include="valve_sdk\misc\CUserCmd.hpp" />
-    <ClInclude Include="valve_sdk\misc\EHandle.hpp" />
-    <ClInclude Include="valve_sdk\misc\Enums.hpp" />
-    <ClInclude Include="valve_sdk\misc\GlobalVars.hpp" />
-    <ClInclude Include="valve_sdk\misc\glow_outline_effect.hpp" />
-    <ClInclude Include="valve_sdk\misc\IHandleEntity.hpp" />
-    <ClInclude Include="valve_sdk\misc\platform.hpp" />
-    <ClInclude Include="valve_sdk\misc\Recv.hpp" />
-    <ClInclude Include="valve_sdk\misc\Studio.hpp" />
-    <ClInclude Include="valve_sdk\misc\UtlBuffer.hpp" />
-    <ClInclude Include="valve_sdk\misc\UtlMemory.hpp" />
-    <ClInclude Include="valve_sdk\misc\UtlString.hpp" />
-    <ClInclude Include="valve_sdk\misc\UtlVector.hpp" />
-    <ClInclude Include="valve_sdk\misc\vfunc.hpp" />
-    <ClInclude Include="valve_sdk\netvars.hpp" />
+    <ClInclude Include="sdk\csgostructs.hpp" />
+    <ClInclude Include="sdk\sdk.hpp" />
+    <ClInclude Include="sdk\interfaces\CClientState.hpp" />
+    <ClInclude Include="sdk\interfaces\CInput.hpp" />
+    <ClInclude Include="sdk\interfaces\IAppSystem.hpp" />
+    <ClInclude Include="sdk\interfaces\IBaseClientDll.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientEntity.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientEntityList.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientMode.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientNetworkable.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientRenderable.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientThinkable.hpp" />
+    <ClInclude Include="sdk\interfaces\IClientUnknown.hpp" />
+    <ClInclude Include="sdk\interfaces\ICollideable.hpp" />
+    <ClInclude Include="sdk\interfaces\IConVar.hpp" />
+    <ClInclude Include="sdk\interfaces\ICvar.hpp" />
+    <ClInclude Include="sdk\interfaces\IEngineSound.hpp" />
+    <ClInclude Include="sdk\interfaces\IEngineTrace.hpp" />
+    <ClInclude Include="sdk\interfaces\IGameEventmanager.hpp" />
+    <ClInclude Include="sdk\interfaces\IMaterialSystem.hpp" />
+    <ClInclude Include="sdk\interfaces\IMDLCache.hpp" />
+    <ClInclude Include="sdk\interfaces\IMoveHelper.hpp" />
+    <ClInclude Include="sdk\interfaces\IPanel.hpp" />
+    <ClInclude Include="sdk\interfaces\IPhysics.hpp" />
+    <ClInclude Include="sdk\interfaces\IPrediction.hpp" />
+    <ClInclude Include="sdk\interfaces\IRenderView.hpp" />
+    <ClInclude Include="sdk\interfaces\ISurface.hpp" />
+    <ClInclude Include="sdk\interfaces\IVDebugOverlay.hpp" />
+    <ClInclude Include="sdk\interfaces\IVEngineClient.hpp" />
+    <ClInclude Include="sdk\interfaces\IViewRender.hpp" />
+    <ClInclude Include="sdk\interfaces\IVModelInfoClient.hpp" />
+    <ClInclude Include="sdk\interfaces\IVModelRender.hpp" />
+    <ClInclude Include="sdk\math\QAngle.hpp" />
+    <ClInclude Include="sdk\math\Vector.hpp" />
+    <ClInclude Include="sdk\math\Vector2D.hpp" />
+    <ClInclude Include="sdk\math\Vector4D.hpp" />
+    <ClInclude Include="sdk\math\VMatrix.hpp" />
+    <ClInclude Include="sdk\misc\BaseHandle.hpp" />
+    <ClInclude Include="sdk\misc\characterset.hpp" />
+    <ClInclude Include="sdk\misc\checksum_crc.hpp" />
+    <ClInclude Include="sdk\misc\checksum_md5.hpp" />
+    <ClInclude Include="sdk\misc\ClientClass.hpp" />
+    <ClInclude Include="sdk\misc\Color.hpp" />
+    <ClInclude Include="sdk\misc\Convar.hpp" />
+    <ClInclude Include="sdk\misc\CUserCmd.hpp" />
+    <ClInclude Include="sdk\misc\EHandle.hpp" />
+    <ClInclude Include="sdk\misc\Enums.hpp" />
+    <ClInclude Include="sdk\misc\GlobalVars.hpp" />
+    <ClInclude Include="sdk\misc\glow_outline_effect.hpp" />
+    <ClInclude Include="sdk\misc\IHandleEntity.hpp" />
+    <ClInclude Include="sdk\misc\platform.hpp" />
+    <ClInclude Include="sdk\misc\Recv.hpp" />
+    <ClInclude Include="sdk\misc\Studio.hpp" />
+    <ClInclude Include="sdk\misc\UtlBuffer.hpp" />
+    <ClInclude Include="sdk\misc\UtlMemory.hpp" />
+    <ClInclude Include="sdk\misc\UtlString.hpp" />
+    <ClInclude Include="sdk\misc\UtlVector.hpp" />
+    <ClInclude Include="sdk\misc\vfunc.hpp" />
+    <ClInclude Include="sdk\netvars.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
