--- a/CSGOSimple/CSGOSimple.vcxproj.filters
+++ b/CSGOSimple/CSGOSimple.vcxproj.filters
@@ -125,14 +125,11 @@
     <ClCompile Include="sdk\sdk.cpp">
       <Filter>Source Files\SDK</Filter>
     </ClCompile>
-    <ClCompile Include="features\misc\misc.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="features\misc\name_prediction.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="configs\options.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="features\misc\nade_prediction.cpp">
+      <Filter>Source Files\features</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -403,13 +400,13 @@
     <ClInclude Include="resource\constchar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="features\misc\misc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="configs\base64.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="helpers\json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="features\misc\nade_prediction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
