--- a/CSGOSimple/CSGOSimple.vcxproj
+++ b/CSGOSimple/CSGOSimple.vcxproj
@@ -98,11 +98,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="configs\options.cpp" />
-    <ClCompile Include="features\bhop.cpp" />
-    <ClCompile Include="features\chams.cpp" />
-    <ClCompile Include="features\glow.cpp" />
+    <ClCompile Include="features\misc\bhop.cpp" />
     <ClCompile Include="features\misc\nade_prediction.cpp" />
-    <ClCompile Include="features\visuals.cpp" />
+    <ClCompile Include="features\visuals\chams.cpp" />
+    <ClCompile Include="features\visuals\glow.cpp" />
+    <ClCompile Include="features\visuals\visuals.cpp" />
     <ClCompile Include="helpers\input.cpp" />
     <ClCompile Include="helpers\math.cpp" />
     <ClCompile Include="helpers\utils.cpp" />
@@ -134,7 +134,11 @@
   <ItemGroup>
     <ClInclude Include="configs\base64.h" />
     <ClInclude Include="configs\config.hpp" />
+    <ClInclude Include="features\misc\bhop.hpp" />
     <ClInclude Include="features\misc\nade_prediction.h" />
+    <ClInclude Include="features\visuals\chams.hpp" />
+    <ClInclude Include="features\visuals\glow.hpp" />
+    <ClInclude Include="features\visuals\visuals.hpp" />
     <ClInclude Include="fonts\cousine.hpp" />
     <ClInclude Include="fonts\fonts.hpp" />
     <ClInclude Include="helpers\json.hpp" />
@@ -144,10 +148,6 @@
     <ClInclude Include="resource\constchar.h" />
     <ClInclude Include="sdk\misc\datamap.hpp" />
     <ClInclude Include="fonts\droid.hpp" />
-    <ClInclude Include="features\bhop.hpp" />
-    <ClInclude Include="features\chams.hpp" />
-    <ClInclude Include="features\glow.hpp" />
-    <ClInclude Include="features\visuals.hpp" />
     <ClInclude Include="helpers\input.hpp" />
     <ClInclude Include="helpers\math.hpp" />
     <ClInclude Include="helpers\utils.hpp" />
