--- a/CSGOSimple/CSGOSimple.vcxproj.filters
+++ b/CSGOSimple/CSGOSimple.vcxproj.filters
@@ -128,10 +128,10 @@
     <ClCompile Include="features\visuals\visuals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="features\misc\bhop.cpp">
+    <ClCompile Include="features\notify\notify.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="features\notify\notify.cpp">
+    <ClCompile Include="features\misc\misc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -409,10 +409,13 @@
     <ClInclude Include="features\visuals\glow.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="features\misc\bhop.hpp">
+    <ClInclude Include="features\notify\notify.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="features\notify\notify.h">
+    <ClInclude Include="features\misc\misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="features\misc\engine_prediction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
