--- a/akenaSDK/akenaSDK.vcxproj
+++ b/akenaSDK/akenaSDK.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="sdk\netvars.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="configs\base64.h" />
+    <ClInclude Include="helpers\base64.h" />
     <ClInclude Include="configs\config.hpp" />
     <ClInclude Include="features\misc\engine_prediction.h" />
     <ClInclude Include="features\misc\misc.h" />
